# Battle-Game

./: CMakeLists.txt  README.md
src/: Character.cpp  Character.h  main.cpp
src/attacks/: AttackingBehavior.h  RegularKick.cpp  RegularKick.h  RegularPunch.cpp  RegularPunch.h
src/weapons/: Weapon.cpp  Weapon.h  WeaponX.cpp  WeaponX.h  WeaponZ.cpp  WeaponZ.h
